--- a/app/views/pages/_problem_row.html.erb
+++ b/app/views/pages/_problem_row.html.erb
@@ -34,7 +34,7 @@
           <div class="problem-row-data-header">Completion Date: </div><%= problem.target_completion_date %> <br>
           <div class="problem-row-data-header">Category: </div> <%= problem.category_title %> <br>
           <% if role_title %>
-            <div class="problem-row-data-header">Role: </div> <%= role_title %> <br>
+            <div class="problem-row-data-header">Role: </div> <div class="problem-row-role-title"><%= role_title %> </div>
           <% end %>
         </div>
       </div>
