--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-light navbar-expand-lg">
   <a class="navbar-brand" href="/">
-    <%= image_tag("colorized-logo.png", class: "navbar-logo") %>
+    <%= image_tag("beta-logo.png", class: "navbar-logo") %>
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="animated-icon2"><span class="navbar-toggler-icon"></span></div>
   </button>
 
   <div class="desktop-nav" >
