--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -66,7 +66,7 @@
   //          infoWindowObj.open(map, markerObj);
   //           };
   // };
-  function initMap(){
+  function initMap(openOrActive){
     map = new google.maps.Map(document.getElementById('map'), {
       center: {lat: <%= @geopoint.latitude %>, lng: <%= @geopoint.longitude %>},
       zoom: 14,
@@ -75,7 +75,13 @@
       fullscreenControl: false
     });
 
-    let json = <%= raw @problems.map.to_json {|problem|}.html_safe %>;
+    let json;
+    if (openOrActive === "open") {
+      json = <%= raw @problems.map.to_json {|problem|}.html_safe %>;
+    } else {
+      json = <%= raw @my_problems.map.to_json {|problem|}.html_safe %>;
+    }
+    
 
 
     let infoWindow = new google.maps.InfoWindow();
