hot damn this looks so much better

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
 
         <!-- Content -->
         <h5 class="text-uppercase">Just Be Human</h5>
-        <p>Just Be Human is operated by Just Being Human, a 501(c)3 nonprofit that is entirely funded by donations. Check out these footer links for more information or to help keep a roof over my head! </p>
+        <p>Just Be Human is run by a 501(c)3 non-profit and is entirely donation-funded. If you'd like to donate, you can learn more by following the link. </p>
 
       </div>
       <!-- Grid column -->
@@ -48,7 +48,7 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> Copyright: Just Being Human, LLC</div>
+  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> Copyright: Just Being Human</div>
   <!-- Copyright -->
 
 </footer>
