--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,7 +44,7 @@
         <% end %>
       <% else %>
         <div class="no-open-problems">
-          There are no open problems nearby that you're not already involved with!
+          It looks like there aren't any more open problems near you right now.
         </div>
       <% end %>
     </div>
