--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,10 +1,11 @@
 @import "mixins.scss";
+@import "theme.scss";
 
 .navbar {
   min-height: 10vh;
   font-family: 'Fjalla One', Verdana, Arial, Sans-Serif;
   
-  border-bottom: 4px solid $lightgrey;
+  border-bottom: 1px solid $midgrey;
 }
 
 .navbar li {
@@ -33,7 +34,7 @@
 }
 
 .nav-item {
-  border: 1px solid $limegreen;
+  border: 2px solid $midgrey;
   border-radius: 10px;
   padding-left: 10vw;
   padding-right: 10vw;
@@ -44,16 +45,6 @@
   color: $limegreen !important;
   text-transform: uppercase;
   font-size: 1.4rem;
-}
-
-.bg-dark {
-  background-color: #003366 !important;
-}
-
-.navbar-beta-tag {
-  vertical-align: text-top;
-  font-size: .3rem;
-  line-height: 200%;
 }
 
 .mobile-nav {
