fix some bugs, do some more cleanup

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -66,6 +66,7 @@
 .homepage-header {
   margin-top: 1vh;
   border-bottom: 1px solid $lightgrey;
+  // height: 4vh;
   padding-bottom: 1vh;
   margin-bottom: 2px;
   font-weight: 700;
