--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     <ul class="navbar-nav mr-auto">
       <% if current_user %>
         <li class="nav-item">
-          <%= link_to 'New Problem', new_problem_path, class: 'nav-link' %>
+          <%= link_to 'New Opportunity', new_problem_path, class: 'nav-link' %>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -44,7 +44,7 @@
         <ul class="navbar-nav mr-auto">
           <% if current_user %>
             <li class="nav-item">
-              <%= link_to 'New Problem', new_problem_path, class: 'nav-link' %>
+              <%= link_to 'New Opportunity', new_problem_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/users/edit">Edit Account</a>
