--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,8 +33,8 @@
   <aside class="home-page-aside">
     <div class="homepage-header">
       <div class="tab hp">
-        <button class="tablinks hp" onclick="openTab(event, 'probs-near-me')" id="defaultOpen">Open</button>
-        <button class="tablinks hp" onclick="openTab(event, 'my-probs')">Active</button>
+        <button class="tablinks hp" onclick="openTab(event, 'probs-near-me')" id="defaultOpen">Open Opportunities</button>
+        <button class="tablinks hp" onclick="openTab(event, 'my-probs')">Active Opportunities</button>
       </div>
     </div>
     <div id="probs-near-me" class="tabcontent hp">
@@ -75,12 +75,8 @@
       fullscreenControl: false
     });
 
-    let json;
-    if (openOrActive === "open") {
-      json = <%= raw @problems.map.to_json {|problem|}.html_safe %>;
-    } else {
-      json = <%= raw @my_problems.map.to_json {|problem|}.html_safe %>;
-    }
+    let json = <%= raw @problems.map.to_json {|problem|}.html_safe %>;
+    
     
 
 
