--- a/app/assets/stylesheets/tabs.scss
+++ b/app/assets/stylesheets/tabs.scss
@@ -34,7 +34,7 @@
   cursor: pointer;
   padding: 14px 16px;
   transition: 0.3s;
-  font-size: 1.8rem;
+  font-size: 1.5em;
   font-weight: 600;
   &.hp {
     margin-left: 5px;
