--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -6,7 +6,7 @@
     <% if !@role && current_user %>
       <%= link_to 'Follow Problem', problems_follow_path(problem_id: @problem.id), class: "btn btn-outline-primary follow-problem-button" %>
     <% elsif !current_user %>
-      <%= link_to 'Sign In', "/users/sign_in", class="problem-sign-in-button" %>
+      <%= link_to 'Sign In', "/users/sign_in", class: "problem-sign-in-button" %>
     <% elsif @role.level == 4 %>
       <%= link_to 'Unfollow Problem', problems_unfollow_path(problem_id: @problem.id), class: "btn btn-outline-primary unfollow-problem-button" %>
     <% elsif @role.level == 2 %>
