--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
 
         <!-- Content -->
         <h5 class="text-uppercase">Just Be Human</h5>
-        <p>Just Be Human is run by a 501(c)3 non-profit and is entirely donation-funded. If you'd like to donate, you can learn more by following the link. </p>
+        <p>Just Be Human is run by a 501(c)3 non-profit and is entirely donation-funded. As part of our commitment to transparency, we publish our operating costs daily. If you'd like to donate, you can learn more by following the footer links. </p>
 
       </div>
       <!-- Grid column -->
