--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -45,7 +45,7 @@
         <% end %>
       <% else %>
         <div class="no-open-problems">
-          It looks like there aren't any more open problems near you right now.
+          It looks like there aren't any more open problems near you right now. Keep an eye out for volunteer opportunities in your neighborhood!
         </div>
       <% end %>
     </div>
