--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -2,11 +2,12 @@
 
 <div class="donation-signup-info">
   <div class="donation-info-container">
-    <div class="donation-info-title">
-      <h3>Some notes:</h3>
+
+    <div class="donation-widget">
+      <iframe frameborder = "0" height="100%" scrolling="no"  src = "https://give.donatekindly.org/jb701/makedonation/donation/d6efeb1e-5dd3-4f04-bbe5-51890ba2eddb"  width="100%"></iframe>
     </div>
 
-    <ul>
+<!--     <ul>
       <li>
         <div class="donation-note-listitem">
           <p>
@@ -29,7 +30,7 @@
         </div>
       </li>
     </ul>
-  </div>
+  </div> -->
 
 <%= render 'donationform', donation: @donation %>
 
