a couple more little button changes

--- a/app/views/pages/_donationform.html.erb
+++ b/app/views/pages/_donationform.html.erb
@@ -36,7 +36,8 @@
       </div>
       <%= f.email_field :email, :required => true, placeholder: "my@email.com" %>
       <%= f.hidden_field :marketing, value: true %>
-      <%= f.button :submit, "I'd like to help!", class: "btn btn-mktg-helper" %>
+      <br>
+      <%= f.button :submit, "I want to help!", class: "btn btn-mktg-helper" %>
     </div>
     
   </div>
