--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -293,8 +293,9 @@
   margin-bottom: 2vh;
   margin-top: 4vh;
   text-align: center;
-  padding-right: 30vw !important;
-  padding-left: 30vw !important;
+  padding-right: 20vw !important;
+  padding-left: 20vw !important;
+  font-size: 1em !important;
 }
 
 .signup-disclaimer {
