alrighty introjs should be installed now

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -1,10 +1,12 @@
+//= require introjs
+
 @import "/*";
 @import "bootstrap";
 @import "tether";
 @import url('https://fonts.googleapis.com/css?family=Fjalla+One&display=swap');
 $enable-responsive-font-sizes: true;
 
-//*= require introjs
+
 
 html, body {
   height: 100vh;
