styling of problem show requirements and posts

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -32,12 +32,15 @@ p, a, span {
   min-height: 75vh;
 }
 
-
-
 #map {
   height: 100%;
   width: 100%;
   margin: auto;
+  border: 1em solid white;
+
+  @include respond-to(handhelds){
+    border: none;
+  };
 }
 
 .alert {
@@ -46,6 +49,9 @@ p, a, span {
 
 .modal-dialog {
   max-width: 60vw;
+  @include respond-to(handhelds) {
+    max-width: 100%;
+  }
 }
 
 .modal-inner {
