--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,7 +1,7 @@
 $primary: #3088CC;
 $secondary: #003366;
 $secondary-hover: #99ccff;
-$info: #70D8C8;
+$info: #99cc66;;
 $success: #6AD173;
 $danger: #CE3333;
 $warning: #F2B849;
@@ -13,9 +13,6 @@ $darkblue: #006699;
 $lightblue: #99ccff;
 $lightpink: #E9B1E0;
 
-
-
-
-
-$lightgrey: #CBCCCE;
-$midgrey: #A2A3A4;
+$lightgrey: #e0e0e0;
+$midgrey: #959CA0;
+$darkgrey: #A2A3A4;
