--- a/app/assets/stylesheets/tabs.scss
+++ b/app/assets/stylesheets/tabs.scss
@@ -1,7 +1,9 @@
+@import "theme.scss";
+
 /* Style the tab content */
 .tabcontent {
   display: none;
-  padding: 2vh 2vw;
+  padding: 2vh 2vh;
   border: 1px solid $lightgrey;
   border-top: none;
   animation: fadeEffect 1s; /* Fading effect takes 1 second */
@@ -14,12 +16,8 @@
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
-  
 
   &.hp {
-    
-    border: none;
     width: 100%;
     display: flex;
   }
@@ -36,13 +34,13 @@
   transition: 0.3s;
   font-size: 1.5em;
   font-weight: 600;
+
   &.hp {
     margin-left: 5px;
     background-color: white;
     text-transform: uppercase;
     padding: 12px 12px;
-    color: $lightgrey;
-    width: 100%;
+    color: $midgrey;
     font-style: italic;
     &:hover {
       color: black;
@@ -52,17 +50,22 @@
       color: black;
       font-style: normal;
     }
+
+    @include respond-to(handhelds){
+      width: 48%;
+      font-size: 1em;
+    };
   }
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #ddd;
+  background-color: $midgrey;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: $lightgrey;
 }
 
 /* Go from zero to full opacity */
