introjs is working and will only run once per browser per page

--- a/app/assets/stylesheets/problems.scss
+++ b/app/assets/stylesheets/problems.scss
@@ -193,6 +193,18 @@
 // PROBLEMS FORM
 
 
+.basic-info-container {
+  padding-bottom: 2vh;
+}
+
+.difficulty-container {
+  padding-bottom: 1vh;
+}
+
+.location-container {
+  padding-bottom: 2vh;
+}
+
 .title-subheader {
   padding-top: 5vh;
 }
