--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light navbar-expand-lg">
   <a class="navbar-brand" href="/">
-    <%= image_tag("beta-logo.png", class: "navbar-logo") %>
+    <%= image_tag("beta-logo.png", class: "navbar-logo", id: "home-step1") %>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation">
     <div class="animated-icon2"><span class="navbar-toggler-icon"></span></div>
@@ -9,7 +9,7 @@
   <div class="desktop-nav" >
     <ul class="navbar-nav mr-auto">
       <% if current_user %>
-        <li class="nav-item">
+        <li class="nav-item" id="home-step2">
           <%= link_to 'New Opportunity', new_problem_path, class: 'nav-link' %>
         </li>
         <li class="nav-item dropdown">
@@ -32,7 +32,7 @@
 
 
     <% if current_user && current_page?('/') %>
-      <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
+      <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get" id="home-step3">
         <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a postal code" aria-label="Change Location" name="location_term">
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="/" value="location_term">Change Location</button>
       </form>
