--- a/app/views/pages/_problem_row.html.erb
+++ b/app/views/pages/_problem_row.html.erb
@@ -1,7 +1,7 @@
 <% role_title = Role.problem_role_title(current_user.id, problem.id) %>
 
 
-<div class="problem-row"
+<div class="problem-row" id="home-step5"
   data-category="<%= problem.category_title %>"
   data-volunteers="<%= problem.volunteers_required - problem.volunteer_count != 0 %>"
   data-defined="<%= problem.defined %>"
