--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <h3><span class="zip-floater">Active Zip: </span><%= @geopoint.zip %></h3>
   </div>
 
-  <div class="d-flex flex-column filter floater" data-open="false" onclick="toggleFilter(event)">
+  <div class="d-flex flex-column filter floater" data-open="false" onclick="toggleFilter(event)" >
     <h3>Filters</h3>
     <div class="filter-container">
       <div class="form-group">
@@ -32,7 +32,7 @@
     </div>
   </div>
   <aside class="home-page-aside">
-    <div class="homepage-header">
+    <div class="homepage-header" id="home-step4">
       <div class="tab hp">
         <button class="tablinks hp" onclick="openTab(event, 'probs-near-me')" id="defaultOpen">Open Opportunities</button>
         <button class="tablinks hp" onclick="openTab(event, 'my-probs')">My Opportunities</button>
@@ -92,13 +92,13 @@
         // @MATT -- fix the parse float issue
 
       data.contentString =
-        `<div id="content">
+        `<div id="marker-content">
           <div id="siteNotice"></div>
-          <h4 id="marker_title" class="marker_title"> ${data.title}</h4>
-          <p id="marker_participants" class="marker_participants">Participant status: ${data.volunteer_count} / ${data.volunteers_required}</p>
-          <p id="marker_followers" class="marker_followers">Followers: ${data.follower_count}</p>
-          <p id="marker_category" class="marker_category">Category: ${data.category_title}</p>
-          <a href="/problems/${data.id}" id="marker_link" class="marker_link">See Problem Details</a>
+          <h4 id="marker-title" class="marker-title"> ${data.title}</h4>
+          <p id="marker-participants" class="marker-participants">Participant status: ${data.volunteer_count} / ${data.volunteers_required}</p>
+          <p id="marker-followers" class="marker-followers">Followers: ${data.follower_count}</p>
+          <p id="marker-category" class="marker_category">Category: ${data.category_title}</p>
+          <a href="/problems/${data.id}" id="marker-link" class="marker-link">See Problem Details</a>
          </div>`;
 
       let marker = new google.maps.Marker({
