--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -7,34 +7,37 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <h5 class="title-subheader">What are the basics?</h5>
-    <div class="title-selection">
-      <%= f.input :title, placeholder: "60-character limit" %>
-      <%= f.input :description, placeholder: "A good description will go a long way." %>
-      <div class="form-group">
-        <%= f.label :category %>
-        <%= f.select :category, @categories.map.with_index {|cat, index| [cat, index] }, {}, class: "form-control" %>
+    <div class="basic-info-container" id="new-problem-step1">
+      <h5 class="title-subheader">What are the basics?</h5>
+      <div class="title-selection">
+        <%= f.input :title, placeholder: "60-character limit" %>
+        <%= f.input :description, placeholder: "A good description will go a long way." %>
+        <div class="form-group">
+          <%= f.label :category %>
+          <%= f.select :category, @categories.map.with_index {|cat, index| [cat, index] }, {}, class: "form-control" %>
+        </div>
       </div>
     </div>
 
 
 
-
-    <h5 class="difficulty-subheader">How much help do you need?</h5>
-    <div class="difficulty-selection">
-      <%= f.input :defined, label: "Is this opportunity defined, or do you want to work with people to figure out the solution?" %>
-      <%= f.input :volunteers_required %>
-      <%= f.label "How difficult do you expect the solution to be? (1 is easiest, 10 is hardest)" %>
-      <%= f.select :estimated_work, [1,2,3,4,5,6,7,8,9,10] %>
+    <div class="difficulty-container" id="new-problem-step2">
+      <h5 class="difficulty-subheader">How much help do you need?</h5>
+      <div class="difficulty-selection">
+        <%= f.input :defined, label: "Is this opportunity defined, or do you want to work with people to figure out the solution?" %>
+        <%= f.input :volunteers_required %>
+        <%= f.label "How difficult do you expect the solution to be? (1 is easiest, 10 is hardest)" %>
+        <%= f.select :estimated_work, [1,2,3,4,5,6,7,8,9,10] %>
+      </div>
     </div>
 
 
 
-
-    <h5 class="location-subheader">Where is your opportunity located?</h5>    
-    <div class="location-selection">
-      <%= f.input :address, placeholder: "If possible, please enter a specific location; an address, intersection, or public place is perfect!" %>
-      <%= f.input :postal_code, placeholder: "A postcode is not necessary if an address is entered" %>
+    <div class="location-container" id="new-problem-step3">
+      <h5 class="location-subheader">Where is your opportunity located?</h5>    
+      <div class="location-selection">
+        <%= f.input :address, placeholder: "If possible, please enter a specific location; an address, intersection, or public place is perfect!" %>
+      </div>
     </div>
 
     <h5 class="completion-date-subheader">When do you want to complete it?</h5>
