--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -1,5 +1,5 @@
 <div class="main container">
-  <h2>Outline a new volunteer opportunity</h2>
+  <h2>Create a new volunteer opportunity</h2>
   <%= render 'form', problem: @problem %>
 
   <br/>
