--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
           <%= link_to 'New Opportunity', new_problem_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          Conversations button
+          <%= link_to 'Conversations', conversations_path, class: 'nav-link' %>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -48,6 +48,9 @@
           <% if current_user %>
             <li class="nav-item">
               <%= link_to 'New Opportunity', new_problem_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Conversations', conversations_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/users/edit">Edit Account</a>
