--- a/app/views/personal_messages/_personal_message.html.erb
+++ b/app/views/personal_messages/_personal_message.html.erb
@@ -1,4 +1,4 @@
 <p><%= emojify personal_message.body %></p>
 <p>at <strong><%= personal_message.created_at %></strong><br>
-  by <strong><%= personal_message.user.name %></strong></p>
+  by <strong><%= personal_message.user.username %></strong></p>
 <hr>
