--- a/app/views/personal_messages/new.html.erb
+++ b/app/views/personal_messages/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New message to <%= @receiver.name %></h1>
+<h1>New message to <%= @receiver.username %></h1>
 
 <%= form_for @personal_message do |f| %>
   <%= hidden_field_tag 'receiver_id', @receiver.id %>
