--- a/app/views/requirements/show.html.erb
+++ b/app/views/requirements/show.html.erb
@@ -93,7 +93,7 @@
   <%= link_to 'Cancel your participation', controller: 'requirements', action: 'cancel_participation', requirement_id: @requirement.id %>
 <% end %>
 
-<% if @prob_level && (@prob_level <= 2 || req_level < 2) %>
+<% if @prob_level && (@prob_level <= 2 || (@req_level && @req_level < 2)) %>
   <%= link_to 'Edit this requirement', edit_requirement_path(@requirement) %>
 <% end %>
 
