fix broken donation page

--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -2,33 +2,9 @@
 
 <div class="donation-signup-info">
   <div class="donation-info-container">
-
-
-
-<!--     <ul>
-      <li>
-        <div class="donation-note-listitem">
-          <p>
-            If you are interested in donating, we will contact you no more than once per month asking for donations once we set up the capability to accept donations online.
-          </p>
-        </div>
-      </li>
-      <li>
-        <div class="donation-note-listitem">
-          <p>
-            If you'd like to help get the word out, you will be entered into an email list of people who are willing to go out into their community and tell people about the new way to volunteer in their community! We will not contact you more than once per week.
-          </p>
-        </div>
-      </li>
-      <li>
-        <div class="donation-note-listitem">
-          <p>
-            Each of these email lists will allow you to subscribe/unsubscribe individually. We don't want to annoy you! 
-          </p>
-        </div>
-      </li>
-    </ul>
-  </div> -->
+    <div class="donation-widget">
+      <iframe frameborder = "0" height="100%" scrolling="yes"  src = "https://give.donatekindly.org/jb701/makedonation/donation/d6efeb1e-5dd3-4f04-bbe5-51890ba2eddb"  width="100%"></iframe>
+    </div>
 
 <%= render 'donationform', donation: @donation %>
 
