acouple more little styling tweaks

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -9,12 +9,12 @@ $enable-responsive-font-sizes: true;
 
 
 html, body {
+  font-family: 'Montserrat', sans-serif;
   height: 100vh;
   margin: 0;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Fjalla One', Arial, sans-serif;
   letter-spacing: 2px;
 }
 
@@ -23,7 +23,7 @@ h1 {
 }
 
 p, a, span {
-  font-family: 'Fjalla One', Arial, sans-serif;
+
 }
 
 .main {
